<resources>
    <string name="app_name">Awraqi</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="filter_by">filter by</string>
    <string name="authentication">Authentication</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">forget password?</string>
    <string name="or">OR</string>
    <string name="clear_all_pages">Clear all pages</string>
    <string name="add_note">Add note</string>
    <string name="highlight">Highlight</string>
    <string name="clear_draw">clear draw</string>
    <string name="save">Save</string>
    <string name="add_note_hint">Add note...</string>
    <string name="draw">Draw</string>
    <string name="preferences">Preferences</string>
    <string name="night_mode">Night mode</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="support">Support</string>
    <string name="buy">Buy now</string>
    <string name="download_preview">Download preview</string>
    <string name="home">Home</string>
    <string name="cancel_download">Cancel download %1$s</string>
    <string name="open">Open</string>
    <string name="page">Page %1$s</string>
    <string name="clear_page">Clear page %1$s</string>
    <string name="downloads">Downloads</string>
    <string name="store">Store</string>
    <string name="no_items_here_yet">No items here yet</string>
    <string name="download">Download</string>
    <string name="downloading_items">downloading items</string>
    <string name="is_downloading">%1$s is downloading</string>
    <string name="download_failed">%1$s download failed</string>
    <string name="download_canceled">%1$s download canceled</string>
    <string name="is_downloaded">%1$s is downloaded</string>
    <string name="loading_the_file">Loading the file</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="pages">%1$s pages</string>
    <string name="university"><font color='#376FCC'>University: </font> </string>
    <string name="faculty"><font color='#376FCC'>faculty: </font> </string>
    <string name="subject"><font color='#376FCC'>Subject: </font> </string>
    <string name="pages_preview"><font color='#376FCC'>Pages: </font> </string>
    <string name="author"><font color='#376FCC'>Author: </font> </string>
    <string name="price">%1$s EGP</string>
    <string name="send">Send</string>
    <string name="password_reset">Password Reset</string>
    <string name="reset_email_was_sent_successfully">Reset email was sent successfully</string>
    <string name="failed">Failed</string>
    <string name="limited_access">Limited access</string>
    <string name="delete">delete</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_browser_app_found">No browser app found</string>
    <string name="no_email_app_found">No email app found</string>

    <array name="filter_spinner">
        <item>purchased</item>
        <item>favorites</item>
        <item>university</item>
        <item>faculty</item>
        <item>grade</item>
        <item>subject</item>
    </array>

    <array name="langs">
        <item>English</item>
        <item>Arabic</item>
    </array>

    <array name="grade">
        <item>first grade</item>
        <item>second grade</item>
        <item>third grade</item>
        <item>forth grade</item>
        <item>fifth grade</item>
    </array>

    <array name="semester">
        <item>first semester</item>
        <item>second semester</item>
    </array>

    <array name="university">
        <item>Tanta University</item>
    </array>

    <array name="faculty">
        <item>Medicine</item>
    </array>

    <string name="no_thanks_continue">No, Thanks! Continue</string>
    <string name="update_now">Update now</string>
    <string name="new_update_available">New Update Available! Upgrade Now for the Best Experience!</string>
    <string name="update_available">New update is available</string>
    <string name="no_thanks_close_the_app">No, Thanks! Close the app</string>
    <string name="version__no_longer_supported">The current version of the application is no longer supported.</string>
    <string name="logout">Logout</string>

    <string name="policy">Policy</string>
    <string name="our_policy">Awraqi app uses third-party services (e.g., Google Analytics, Firebase) to collect data that is relevant to enhancing the user experience. These services have their own privacy policies.\n\nWe do not collect any personal information or data from users of this app. No data is collected, stored, or shared.\n\nIf you have any questions, please contact us at awraqi.help@gmail.com</string>


</resources>