<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        >

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.UpdateFragment"
            >

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:src="@drawable/update_cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_available"
                    android:textColor="@color/black_text"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:id="@+id/update_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/gray_text"
                    android:text="@string/new_update_available"
                    android:textSize="@dimen/_13ssp" />




                <com.google.android.material.button.MaterialButton
                    android:id="@+id/update_button"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:text="@string/update_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/_13ssp"
                    android:backgroundTint="@color/primary_color"
                    app:layout_constraintEnd_toStartOf="@id/buy_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/items_details" />


                <TextView
                    android:id="@+id/action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_thanks_continue"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginBottom="@dimen/_50sdp"
                    />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>