<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SettingFragment">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:src="@drawable/baseline_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toTopOf="@id/back_button"
            app:layout_constraintBottom_toBottomOf="@id/back_button"
            android:textColor="@color/primary_color"
            android:layout_marginStart="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:drawableStart="@drawable/baseline_account_circle_24"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios"
            android:drawablePadding="@dimen/_7sdp"
            android:gravity="center_vertical"
            android:textSize="@dimen/_12ssp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_15sdp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_button" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/primary_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signIn" />

        <TextView
            android:id="@+id/preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_favorite_24"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios"
            android:drawablePadding="@dimen/_7sdp"
            android:textSize="@dimen/_12ssp"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_15sdp"
            android:text="@string/preferences"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signIn"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/primary_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preferences" />

        <TextView
            android:id="@+id/help_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_contact_support_24"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios"
            android:drawablePadding="@dimen/_7sdp"
            android:gravity="center_vertical"
            android:textSize="@dimen/_12ssp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_15sdp"
            android:text="@string/support"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preferences" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>