<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingFragment">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:src="@drawable/baseline_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toTopOf="@id/back_button"
            app:layout_constraintBottom_toBottomOf="@id/back_button"
            android:textColor="@color/primary_color"
            android:layout_marginStart="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintTop_toBottomOf="@id/back_button"
           android:layout_marginTop="@dimen/_30sdp"
           >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               app:layout_constraintStart_toStartOf="parent"

               >
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:drawableStart="@drawable/moon"
                   android:drawablePadding="@dimen/_7sdp"
                   android:gravity="center_vertical"
                   android:textSize="@dimen/_12ssp"
                   android:paddingHorizontal="@dimen/_5sdp"
                   android:paddingVertical="@dimen/_15sdp"
                   android:text="@string/night_mode"
                   android:textColor="@color/black"
                   android:layout_weight="1"
                   />

               <androidx.appcompat.widget.SwitchCompat
                   android:id="@+id/night_mode_switch"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:thumbTint="@drawable/switch_thumb_selector"
                   app:trackTint="@drawable/switch_track_selector"
                   />

           </LinearLayout>

           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/_1sdp"
               android:background="@color/gray"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/signIn" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               app:layout_constraintStart_toStartOf="parent"

               >
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:drawableStart="@drawable/language"
                   android:drawablePadding="@dimen/_7sdp"
                   android:gravity="center_vertical"
                   android:textSize="@dimen/_12ssp"
                   android:paddingHorizontal="@dimen/_5sdp"
                   android:paddingVertical="@dimen/_15sdp"
                   android:text="@string/language"
                   android:textColor="@color/black"
                   android:layout_weight="1"
                   />

               <androidx.appcompat.widget.AppCompatSpinner
                   android:id="@+id/lang_spinner"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:entries="@array/langs"
                   />

           </LinearLayout>

       </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>